--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "com.unity.burst": "1.2.0",
     "com.unity.collab-proxy": "1.2.16",
+    "com.unity.entities": "0.5.0-preview.17",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.3",
     "com.unity.render-pipelines.high-definition": "7.1.6",
