--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /[Mm]emoryCaptures/
 
 .vscode
+.vimrc
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
