--- a/Runtime/com.eidetic.urack.Runtime.asmdef
+++ b/Runtime/com.eidetic.urack.Runtime.asmdef
@@ -7,7 +7,9 @@
         "Unity.Jobs",
         "Unity.VisualEffectGraph.Runtime",
         "Unity.RenderPipelines.Core.Runtime",
-        "Unity.RenderPipelines.HighDefinition.Runtime"
+        "Unity.RenderPipelines.HighDefinition.Runtime",
+        "Unity.Mathematics",
+        "com.Eidetic.ColorExtensions"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
