Created Makefile for building SDK dll

--- a/Editor/Base/com.eidetic.urack.Editor.asmdef
+++ b/Editor/Base/com.eidetic.urack.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "com.eidetic.urack.Editor",
+    "name": "com.Eidetic.URack.Editor",
     "references": [
         "GUID:b1a4a873deb83004bb7ab9eba011d80e"
     ],
