--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "name": "com.eidetic.urack",
-  "displayName": "URack Base",
+  "displayName": "URack",
   "version": "0.0.1",
   "unity": "2019.3",
   "description": "Base for developing visualiser modules that connect to VCV Rack with the URack plugin.",
-  "keywords": ["vcv rack", "vcv", "music", "performance", "synthesizer", "daw", "visualizer", "modular", "audio", "audio-visual"],
+  "keywords": [
+    "vcv rack",
+    "vcv",
+    "music",
+    "performance",
+    "synthesizer",
+    "daw",
+    "visualizer",
+    "modular",
+    "audio",
+    "audio-visual"
+  ],
   "category": "Music",
   "dependencies": {
-    "com.unity.burst": "1.2.2",
-    "com.unity.entities": "0.5.1-preview.11",
-    "com.unity.render-pipelines.high-definition": "7.1.8"
+    "com.unity.burst": "1.3.2",
+    "com.unity.visualeffectgraph": "7.3.1"
   },
   "repository": {
     "type": "git",
