--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "category": "Music",
   "dependencies": {
     "com.unity.burst": "1.3.2",
-    "com.unity.visualeffectgraph": "7.3.1"
+    "com.unity.visualeffectgraph": "7.3.1",
+    "com.unity.jobs": "0.2.10-preview.12"
   },
   "repository": {
     "type": "git",
